ecmascript/parser/tests/typescript-errors/tsc/es6/arrowFunction/emitArrowFunctionWhenUsingArguments12/input.ts.stderr
error: 'eval' and 'arguments' cannot be used as a binding identifier in strict mode
 --> $DIR/tests/typescript-errors/tsc/es6/arrowFunction/emitArrowFunctionWhenUsingArguments12/input.ts:4:7
  |
4 |     f(arguments) {
  |       ^^^^^^^^^

